# ExercicioPratico2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_EXPLANATION.md  Makefile  README.md  README_PT.md  TECHNICAL.md  cmake_install.cmake  tp2
.cache/clangd/index/: Mesh.hpp.0D3F660E8B2016AC.idx  Mesh.hpp.D83D4352859E6412.idx  camera.h.33CB363F40F79E7F.idx  filesystem.h.56E3A24E755E5AD1.idx  glad.c.358B9985084A7C65.idx  glad.h.7EF197F72B128B04.idx  khrplatform.h.E7F46AD24D90C0D0.idx  main.cpp.00C941DE4041082A.idx  objloader.cpp.0950E7D68B5C22DE.idx  objloader.hpp.697061E3876EFF92.idx  shader.cpp.D8320D5BDC047EAE.idx  shader.h.113B6EEE01D968B3.idx  shader.hpp.23716F627FA179F9.idx  transform.h.7BF9B8739357F272.idx
assets/: deer.mtl
common/: Mesh.hpp  objloader.hpp  shader.hpp
shaders/: phong.frag  phong.vert
src/: Mesh.hpp  main.cpp  objloader.cpp  shader.cpp
